Format Fix: Dates font too large
Fixed a word wrap issue caused by the date font being too large within
the table cell on league picks page.

--- a/css/league-picks.css
+++ b/css/league-picks.css
@@ -25,8 +25,7 @@ th, td {
 tbody[id="league-picks-table"] td {
 	border-bottom: thin solid #d0d0d0;
 }
-tbody[id="league-picks-table"] tr:not([id="headers"]),
-tr[id="away-teams"], tr[id="home-teams"], tr[id="byes"] {
+table[id="nfl-games"] tr:not([id="headers"]):not([id="quarter"]){
 	height: 77px;
 }
 .pick-cell {
